--- a/public/signup.html
+++ b/public/signup.html
@@ -16,16 +16,17 @@
 <body>
   
   <form method="post" action="/register">
-    <input type="email" name="email" disabled="disabled" id="email">
+    <input type="hidden" name="email"  id="email">
     <input type="hidden" name="authKey" id="authKey">
+    <input type="text" name="name"  id="name" placeholder="Your Name">
     <input type="password" name="password" required placeholder="password">
     <input type="password" name="confirmPassword" required placeholder="Confirm Password">
-    <select required>
+    <select required name="sex" >
       <option value="none" disabled selected>Choose</option>
       <option value="male">Male</option>
       <option value="female">Female</option>
     </select>
-    <input type="url" name="githubUrl" required placeholder="https://github.com/Raj2310">
+    <input type="url" name="githubUrl"  placeholder="https://github.com/Raj2310" name="github_profile" required>
     <input type="submit">
   </form>
   <script src="js/signup.js"></script>
