Basic user registration

--- a/public/signup.html
+++ b/public/signup.html
@@ -26,7 +26,7 @@
       <option value="male">Male</option>
       <option value="female">Female</option>
     </select>
-    <input type="url" name="githubUrl"  placeholder="https://github.com/Raj2310" name="github_profile" required>
+    <input type="url"  placeholder="https://github.com/Raj2310" name="github_profile" required>
     <input type="submit">
   </form>
   <script src="js/signup.js"></script>
