api for userInfo on dashboard

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -10,6 +10,9 @@
     	
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
+    <div class="ratingContainer">
+      
+    </div>
     <script type="text/javascript" src="js/dashboard.js"></script>
   </body>
 </html>
