--- a/public/signup.html
+++ b/public/signup.html
@@ -15,7 +15,7 @@
 
 <body>
   
-  <form method="post" action="/register">
+  <form method="post" action="users/register">
     <input type="hidden" name="email"  id="email">
     <input type="hidden" name="authKey" id="authKey">
     <input type="text" name="name"  id="name" placeholder="Your Name">
