--- a/public/signup.html
+++ b/public/signup.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Coder- Dashboard</title>
+  <title>Coder-Club</title>
   <meta name="description" content="Coder Dashboardard Signup">
   <meta name="author" content="raj Vaibhav Singh">
   <!--[if lt IE 9]>
